--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dev_dependencies:
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
   golden_toolkit: ^0.15.0
+  mocktail: ^0.3.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
