--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   freezed: ^2.3.5
   freezed_annotation: ^2.2.0
+  audioplayers: ^4.1.0
 
 dev_dependencies:
   flutter_test:
