--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   freezed: ^2.3.5
   freezed_annotation: ^2.2.0
   audioplayers: ^4.1.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
